<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/app_title"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="95dp"
            android:text="@string/voltage" />

        <TextView
            android:id="@+id/tv_battery_voltage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="95dp"
            android:text="@string/voltage1" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="95dp"
            android:text="@string/inputBattery" />

        <TextView
            android:id="@+id/tv_battery_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="95dp"
            android:text="@string/inputBattery1" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="110dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="95dp"
            android:text="@string/temperatureputBattery" />

        <TextView
            android:id="@+id/tv_Battery_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="95dp"
            android:text="@string/temperatureputBattery" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coreTemperatureput" />

        <TextView
            android:id="@+id/tv_core_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coreTemperatureput1" />

        <Button
            android:id="@+id/bt_core_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/temperatureputQuery" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginTop="175dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/prinitDensity"
            android:textSize="7pt" />

        <RadioGroup
            android:id="@+id/rd_density"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="210dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/density1" />

            <RadioButton
                android:id="@+id/rb_medium"
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_height="wrap_content"
                android:text="@string/density2" />

            <RadioButton
                android:id="@+id/rb_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/density3" />
        </RadioGroup>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="210dp"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/et_print_blank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="90dp"
            android:digits="1234567890"
            android:hint="@string/printBlank" />

        <Button
            android:id="@+id/bt_print_blank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:text="@string/printBlankTest" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="260dp"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/et_print"
            android:layout_width="230dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:hint="@string/inputPrintData"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <Button
            android:id="@+id/bt_print"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/print" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="340dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:text="@string/printNum" />

        <EditText
            android:id="@+id/et_print_num"
            android:layout_width="wrap_content"
            android:digits="1234567890"
            android:layout_height="wrap_content"
            android:hint="@string/defaultNum" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:text="@string/printDate" />

        <EditText
            android:id="@+id/et_time_interval"
            android:layout_width="wrap_content"
            android:digits="1234567890"
            android:layout_height="wrap_content"
            android:hint="@string/defaultTime" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="380dp">

        <Button
            android:id="@+id/bt_print_black"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:text="@string/printBlack" />

        <Button
            android:id="@+id/bt_print_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:text="@string/printText" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="420dp">

        <Button
            android:id="@+id/bt_print_map"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:text="@string/printMap" />

        <Button
            android:id="@+id/bt_stop_print"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:text="@string/printStop" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="460dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:text="@string/printCycle" />

        <ToggleButton
            android:id="@+id/bt_cycle_print"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:textOn="@string/cycleIng"
            android:textOff="@string/cycleEnd" />
    </LinearLayout>

</RelativeLayout>
